#Fix bugs: This fix testimonials weird rendering to left side. this fix AdminHome links out of position(not centered) Fix fix images not showing in home and about us due to name missmatching

--- a/client/src/components/styles/BusinessCertificate.module.css
+++ b/client/src/components/styles/BusinessCertificate.module.css
@@ -31,7 +31,7 @@
 
 /* >>>>>>>>>>>>>>>>>> KingBengals' Logo <<<<<<<<<<<<<<<<<<<<<*/
 .kbLogoContainer {
-  width: 200px;
+  width: 100px;
 }
 .kbLogoContainer img {
   width: 100%;
